# bengal

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  autoinstall.sh  flake.nix  tests.sh
.github/: Bengal.tmLanguage.json
.github/workflows/: build_artifacts.yml  build_releases.yml  ci.yml  linux.yml
broken/: 10_all_features.bl  12_class.bl  22_http_client.bl  26_reflection.bl  30_env_test.bl  31_stack_trace.bl  35_fs_test.bl  39_new_types.bl  40_native_class.bl  43_generics_test.bl  44_math_test.bl  45_args_simple.bl  45_args_test.bl  49_math_simple_test.bl  99_syntax_error.bl
bytecode-viewer/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  types.rs
docker/: Dockerfile
docs/: examples.html  guide.html  index.html  reference.html  std-lib.html
docs/css/: style.css
docs/js/: main.js
example/: 01_hello_world.bl  02_module_test.bl  11_casting.bl  11_class.bl  121_time.bl  122_time_features.bl  123_password_generator.bl  12_class.bl  13_interface.bl  20_async_test.bl  21_async_http.bl  22_http_client.bl  23_type_test.bl  24_block_comments.bl  25_loops.bl  26_reflection.bl  27_multiline_strings.bl  28_try_catch.bl  29_nested_try_catch.bl  30_env_test.bl  31_stack_trace.bl  32_nested_exception.bl  33_nested_stack.bl  34_uncaught_exception.bl  35_fs_test.bl  36_inc_dec.bl  37_continue.bl  38_debug_test.bl  39_new_types.bl  40_native_class.bl  41_shebang.bl  42_arrays.bl  44_math_test.bl  47_fibonacci.bl  50_simple_float_test.bl  51_builder.bl  52_unit_test.bl  55_number_bases.bl  56_bitwise_ops.bl  98_type_error.bl  (+2 more)
sparkler/: Cargo.toml
sparkler/src/: async_runtime.rs  executor.rs  lib.rs  linker.rs  opcodes.rs  vm.rs
src/: bytecode_viewer.rs  main.rs  repl.rs
std/: Cargo.toml  data.bl  ffi.bl  fs.bl  http.bl  io.bl  lib.bl  map.bl  math.bl  random.bl  shell.bl  sys.bl  test.bl  time.bl
std/src/: data.rs  ffi.rs  fs.rs  http.rs  io.rs  json.rs  lib.rs  math.rs  random.rs  reflect.rs  str.rs  sys.rs  time.rs
