[workspace]
resolver = "2"
members = [
    "compiler",
    "sparkler",
    "std",
    "bytecode-viewer",
    ".",
]

[package]
name = "bengal-cli"
version = "0.1.0"
edition = "2021"
description = "Bengal language CLI"
license = "MIT"

[package.metadata.deb]
maintainer = "Your Name <you@example.com>"
copyright = "..."
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = "bengal compiler"
section = "compiler"
priority = "optional"
assets = [
    ["target/release/bengal", "usr/bin/", "755"]
]

[package.metadata.generate-rpm]
license = "MIT"
assets = [
    { source = "target/release/bengal", dest = "/usr/bin/bengal", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/bengal/LICENSE", mode = "644" },
]

[[bin]]
name = "bengal"
path = "src/main.rs"

[dependencies]
bengal-compiler = { path = "compiler" }
sparkler = { path = "sparkler" }
bytecode-viewer = { path = "bytecode-viewer" }
bengal-std = { path = "std" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
